# Analyzator

./: .gitignore  CMakeLists.txt  README.md
example_clients/: a.out  client.c  client_for_tests.cpp  client_result.txt  input_data.txt
example_clients/client/: CMakeLists.txt
example_clients/client/include/: cipher.h  decipher.h  needed.h
example_clients/client/src/: cipher.c  decipher.c  main.c  needed.c
include/: Add.h  Analyzer.h  Auth.h  Authentification.h  Blocker.h  CSV_reader.h  Client.h  Code_value.h  Command_checker.h  Compressor.h  Del.h  Edit.h  Get.h  Handle.h  Hasher.h  Info_value.h  Log.h  PostgresDB.h  Reg_or_Auth.h  Registration.h  Result_generator.h  TCP_server.h  new_TCP_server.h
old_code/: Auth.cpp  Password.cpp  Password.h  TCP_server.cpp  TCP_server.h
res/: codes.csv
src/: Add.cpp  Analyzer.cpp  Application.cpp  Auth.cpp  Authentification.cpp  Blocker.cpp  CSV_reader.cpp  Client.cpp  Code_value.cpp  Command_checker.cpp  Compressor.cpp  Del.cpp  Edit.cpp  Get.cpp  Handle.cpp  Hasher.cpp  Info_value.cpp  Log.cpp  Password.cpp  PostgresDB.cpp  Reg_or_Auth.cpp  Registration.cpp  Result_generator.cpp  TCP_server.cpp  main.cpp  new_TCP_server.cpp
tests/: test_db.cpp  test_db_create.cpp  test_fill_csv.cpp  test_generate_log.cpp  test_hasher.cpp  test_log_module.cpp  test_log_reader.cpp  test_result_generator.cpp  test_select_pool_thread.cpp  test_tcp.cpp
